--- a/src/app/fruit/home/home.component.html
+++ b/src/app/fruit/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="container">
+    <div class="table">
+        <thead>
+            <tr>
+                <th scope="col">id</th>
+                <th scope="col">name</th>
+                <th scope="col">quantity</th>
+                <th scope="col">price</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of allFruits">
+                <th scope="row">{{item.id}}</th>
+                <td>{{item.name}}</td>
+                <td>{{item.price}}</td>
+                <td>{{item.quantity}}</td>
+            </tr>
+        </tbody>
+    </div>
+</div>
