--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<div class="container">
+    <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="cotanier-fluid">
+            <a href="#" class="navbar-brand">Fruits</a>
+        </div>
+        <div class="d-flex me-3">
+            <button class="btn btn-success">Add+</button>
+        </div>
+    </div>
+</div>
 <router-outlet></router-outlet>
