--- a/src/app/fruit/home/home.component.html
+++ b/src/app/fruit/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="table">
+    <table class="table ">
         <thead>
             <tr>
                 <th scope="col">id</th>
@@ -17,5 +17,5 @@
                 <td>{{item.quantity}}</td>
             </tr>
         </tbody>
-    </div>
+    </table>
 </div>
