router-link to create page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <a href="#" class="navbar-brand">Fruits</a>
         </div>
         <div class="d-flex me-3">
-            <button class="btn btn-success">Add+</button>
+            <button class="btn btn-success" routerLink="/fruit/create">Add+</button>
         </div>
     </div>
 </div>
