--- a/src/app/fruit/home/home.component.html
+++ b/src/app/fruit/home/home.component.html
@@ -6,7 +6,7 @@
                 <th scope="col">name</th>
                 <th scope="col">quantity</th>
                 <th scope="col">price</th>
-
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -15,6 +15,8 @@
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.quantity}}</td>
+                <td>{{item.quantity}}</td>
+                <td><a href="" class="btn btn-primary" [routerLink]="['/fruit/edit', item.id]">Edit</a></td>
             </tr>
         </tbody>
     </table>
